Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-app
spec:
  containers:
  - name: nextjs-app
    image: gcr.io/gcp-kubernetes-cluster-415821/nextjs-app:v1
    ports:
    - containerPort: 3000
